# Enigma

./: .dmypy.json  .gitignore  README.md  enigma.py  enigmaDb.py  enigmatic.py  index.html  infos.md  main.py  py.uml  pyproject.toml  pyscript.toml  pytest.ini  requirements.txt  run_enigma.py
data/: rotorDetails.csv  rotorDetails.ods
enigmatic/: __init__.py  enigma.py  plugboard.py  rotor.py
src/: rich_enigma.py  run2_enigma.py  run_enigma.py
src/enigmatic/: __init__.py  enigma.py  enigmatic.py  new_wheel.py  plugboard.py  pugboard.py  rotor.py  wheel.py
src/examples/: run_enigma_simple.py
src/snippets/db/: enigma.db  enigmaDb.py
src/web/: enigma.html  index.html  main.py  output.css  pyscript.toml
test/: run_enigma.py  test.py  test_enigma.py
test/test_messages/: msg0.yaml  msg_1.yaml  msg_2.yaml
tests/: test_enigma.py  test_plugboard.py  test_wheel.py
tests/test_messages/: msg_0.yaml  msg_1.yaml  msg_2.yaml
