[project]
name = "enigma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.7"
dependencies = [
    "attrs>=24.2.0",
    "numpy>=2.1.2",
    "plotext>=5.3.2",
    "pyyaml>=6.0.2",
    "rich>=13.9.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.ruff]
line-length = 150
